Set Manual pipeline trigger

--- a/.github/workflows/first-demo-pipeline.yaml
+++ b/.github/workflows/first-demo-pipeline.yaml
@@ -2,6 +2,10 @@ name: first-demo-pipeline
 
 on:
   workflow_dispatch:
+  push:
+    branches:
+      - workflow-demo
+  pull_request:
 
 jobs:
   run_basc_taks:
