--- a/.github/workflows/manual.yaml
+++ b/.github/workflows/manual.yaml
@@ -3,6 +3,10 @@ name: manual-pipeline
 on:
   workflow_dispatch:
     inputs:
+      branchname:
+        description: Please enter branch name
+        required: true
+        type: string
       logLevel:
         description: 'Log level'
         required: true
@@ -26,8 +30,11 @@ on:
         required: true 
 jobs:
   print-tag:
-    runs-on: ubuntu-latest
-    if:  ${{ inputs.print_tags }} 
+    runs-on: ubuntu-latest 
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2.4.2
+        with:
+          ref: ${{ inputs.branchname }}
       - name: Print the input tag to STDOUT
         run: echo  The tags are ${{ inputs.tags }} 
