--- a/.github/workflows/manual.yaml
+++ b/.github/workflows/manual.yaml
@@ -1,3 +1,4 @@
+name: manual-pipeline
 on:
   workflow_dispatch:
     inputs:
@@ -25,7 +26,7 @@ on:
   push:
     branches:
       - main
-name: manual-pipeline  ${{ github.ref_name }}
+
 jobs:
   print-tag:
     runs-on: ubuntu-latest 
