--- a/.github/workflows/manual.yaml
+++ b/.github/workflows/manual.yaml
@@ -1,4 +1,3 @@
-name: manual-pipeline 
 on:
   workflow_dispatch:
     inputs:
@@ -26,6 +25,7 @@ on:
         type: string 
 env:
   BRANCH_NAME: ${{ github.ref_name }}
+name: manual-pipeline - ${{ env.BRANCH_NAME }}  
 jobs:
   print-tag:
     runs-on: ubuntu-latest 
